force-app/main/default/objects/Line_of_Credit_Collateral__c/Line_of_Credit_Collateral__c.object-meta.xml
<CustomObject>
    <label>Line of Credit Collateral</label>
    <nameField>
        <displayFormat>LOC-COL-{000000}</displayFormat>
        <label>Line of Credit Collateral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line of Credit Collaterals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>