force-app/main/default/objects/Line_of_Credit_Collateral__c/fields/Has_Expiration_Task__c.field-meta.xml
<CustomField>
    <fullName>Has_Expiration_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Expiration Task</label>
    <type>Checkbox</type>
</CustomField>