force-app/main/default/objects/Line_of_Credit_Collateral__c/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issuer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Line of Credit Collaterals</relationshipLabel>
    <relationshipName>Line_of_Credit_Collaterals</relationshipName>
    <type>Lookup</type>
</CustomField>