force-app/main/default/objects/Line_of_Credit_Collateral__c/fields/Line_of_Credit_Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Credit_Collateral_Type__c</fullName>
    <label>Line of Credit Collateral Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Housing/Mortgage</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Promissory Note</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>PPSA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>