force-app/main/default/objects/Line_of_Credit_Collateral__c/validationRules/Expiration_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Issue_Date__c &gt;=  Expiration_Date__c</errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>piration Date cannot be equal Or  before Issue Date</errorMessage>
</ValidationRule>