force-app/main/default/objects/Line_of_Credit_Collateral__c/validationRules/value_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>value_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Value__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Value__c</errorDisplayField>
    <errorMessage>Value must be positive</errorMessage>
</ValidationRule>